--- a/package.json
+++ b/package.json
@@ -13,19 +13,14 @@
     "@react-navigation/native-stack": "^6.9.13",
     "expo": "~48.0.18",
     "expo-camera": "~13.2.1",
+    "expo-image": "^1.3.1",
+    "expo-image-picker": "^14.3.1",
+    "expo-media-library": "~15.2.3",
+    "expo-module-scripts": "^3.0.11",
     "expo-status-bar": "~1.4.4",
-    "react": "18.2.0",
+    "react": "^18.2.0",
     "react-native": "0.71.8",
-    "react-native-maps": "^1.7.1",
-<<<<<<< HEAD
-=======
-    "expo-camera": "~13.2.1",
-    "expo-sensors": "~12.1.1",
-    "expo-image-picker": "~14.1.1",
-    "expo-permissions": "~14.1.1",
-    "expo-image": "~1.0.1",
->>>>>>> 907f052fcc676de1882bc2c85c42582e77bb0848
-    "expo-media-library": "~15.2.3"
+    "react-native-maps": "^1.7.1"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
