--- a/package.json
+++ b/package.json
@@ -20,7 +20,8 @@
     "expo-status-bar": "~1.4.4",
     "react": "^18.2.0",
     "react-native": "0.71.8",
-    "react-native-maps": "^1.7.1"
+    "react-native-maps": "^1.7.1",
+    "expo-location": "~15.1.1"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
