--- a/package.json
+++ b/package.json
@@ -15,13 +15,14 @@
     "expo-camera": "~13.2.1",
     "expo-image": "^1.3.1",
     "expo-image-picker": "^14.3.1",
+    "expo-location": "~15.1.1",
     "expo-media-library": "~15.2.3",
     "expo-module-scripts": "^3.0.11",
+    "expo-permissions": "~14.1.1",
     "expo-status-bar": "~1.4.4",
     "react": "^18.2.0",
     "react-native": "0.71.8",
-    "react-native-maps": "^1.7.1",
-    "expo-location": "~15.1.1"
+    "react-native-maps": "^1.7.1"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
