--- a/package.json
+++ b/package.json
@@ -11,9 +11,10 @@
   "dependencies": {
     "@react-navigation/native": "^6.1.7",
     "@react-navigation/native-stack": "^6.9.13",
+    "@types/react": "~18.2.14",
     "expo": "~48.0.18",
     "expo-camera": "~13.2.1",
-    "expo-image": "^1.3.1",
+    "expo-image": "^1.3.2",
     "expo-image-picker": "^14.3.1",
     "expo-location": "~15.1.1",
     "expo-media-library": "~15.2.3",
@@ -22,7 +23,8 @@
     "expo-status-bar": "~1.4.4",
     "react": "^18.2.0",
     "react-native": "0.71.8",
-    "react-native-maps": "^1.7.1"
+    "react-native-maps": "^1.7.1",
+    "typescript": "^5.1.3"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
