--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "web": "expo start --web"
   },
   "dependencies": {
+    "@firebase/storage": "^0.11.2",
     "@react-navigation/native": "^6.1.7",
     "@react-navigation/native-stack": "^6.9.13",
     "@types/react": "~18.2.14",
@@ -21,6 +22,7 @@
     "expo-module-scripts": "^3.0.11",
     "expo-permissions": "~14.1.1",
     "expo-status-bar": "~1.4.4",
+    "firebase": "^10.1.0",
     "react": "^18.2.0",
     "react-native": "0.71.8",
     "react-native-maps": "^1.7.1",
